update scroll layout bugs

--- a/src/layout/layout.less
+++ b/src/layout/layout.less
@@ -160,3 +160,7 @@
     }
   }
 }
+
+.router-link {
+  user-select: none;
+}
